# Robot-Catcher-Arm

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: controllers.yaml  joint_names_arm.yaml
launch/: gazebo.launch.py
meshes/: Camera.STL  Hoop.STL  LowerArm.STL  Shoulder.STL  UpperArm.STL  Wrist.STL  base_link.STL
scripts/: ball_detector.py  ik_solver.py  trajectory_predictor.py
urdf/: arm.csv  arm.urdf
worlds/: ball_world.sdf
