<?xml version="1.0"?>
<package format="3">
  <name>arm</name>
  <version>1.0.0</version>
  <description>URDF Description package for arm robot</description>
  <maintainer email="2vaibhavg@gmail.com">Vaibhav Garg</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>